[project]
name = "workspace-foundation-python"
version = "0.1.0"
requires-python = ">=3.15"
dependencies = [
    # --- [GENERAL]
    "anyio",
    "protobuf<7.0",                                  # [RUNTIME]: transport wire codec; protobuf 7.x remains outside the current OpenTelemetry line
    "grpcio",                                        # [RUNTIME]: gRPC transport for ServerHost serve paths
    "findiff",                                       # [COMPUTE]: finite-difference operators for solvers and sensitivity
    "beartype",
    "cyclopts",
    "msgspec",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-grpc",            # [RUNTIME]: gRPC server/client span instrumentation for server/serve
    "pydantic",
    "pydantic-settings",
    "expression",
    "stamina",
    "structlog",
    "psutil",
    "fsspec",
    "s3fs",                                          # [DATA]: S3 fsspec backend for shared-pull artifact reads
    "gcsfs",                                         # [DATA]: GCS fsspec backend for shared-pull artifact reads
    "obstore",                                       # [DATA]: object-store backend
    "obspec-utils",                                  # [DATA]: multi-store ObjectStoreRegistry companion to obstore
    "httpx",                                         # [TRANSPORT]: approved HTTP client surface for typed adapters
    "watchfiles",
    "apscheduler",                                   # [RUNTIME]: cron, interval, and date triggers
    "universal-pathlib",                             # [DATA]: UPath storage_options/protocol resolution for the fsspec artifact store
    "asyncssh",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "keyring",                                       # [RUNTIME]: OS keychain credential boundary
    "zstandard",                                     # [TOOLING]: zstd compression for tools.assay logging and cache payloads
    "trio",                                          # [RUNTIME]: structured-concurrency backend anyio runs on
    "zlib-ng",                                       # [DATA]: zlib-ng/gzip-ng accelerated compression beside zstandard/lz4/brotli
    "csvkit",                                        # [DATA]: CSV CLI suite for the tabular subprocess boundary
    # --- [SCIENTIFIC]
    "adbc-driver-manager",                           # [DATA]: ADBC driver manager for Arrow Flight SQL and DuckDB
    "arro3-core",                                    # [DATA]: Arrow core bridge
    "arviz<1.0",                                     # [COMPUTE]: Bayesian diagnostics
    "awkward",                                       # [DATA]: ragged arrays
    "compas",                                        # [GEOMETRY]: algebra toolkit
    "connectorx; python_version<'3.15'",             # [DATA]: SQL-to-Arrow loader
    "cubed",                                         # [DATA]: bounded-memory distributed arrays
    "dask",
    "deltalake",                                     # [DATA]: lakehouse tables
    "duckdb",                                        # [DATA]: analytical SQL engine
    "geopandas",                                     # [GEOMETRY]: geospatial frames
    "h5py",                                          # [DATA]: HDF5 arrays
    "icechunk; python_version<'3.15'",               # [DATA]: versioned tensor store
    "ibis-framework",                                # [DATA]: backend-agnostic SQL-expression IR
    "jax; python_version<'3.15'",                    # [COMPUTE]: XLA accelerator
    "laspy",                                         # [GEOMETRY]: LAS/LAZ point-cloud IO
    "meshio",
    "nanoarrow",                                     # [DATA]: Arrow C Data Interface interop
    "narwhals",                                      # [DATA]: dataframe-agnostic API
    "netcdf4",                                       # [COMPUTE]: CFD and field IO
    "networkx",
    "numcodecs",                                     # [DATA]: zarr v3 filter and compressor codec registry
    "numba; python_version<'3.15'",                  # [COMPUTE]: LLVM JIT accelerator
    "numpy",                                         # [COMPUTE]: array substrate
    "numpyro; python_version<'3.15'",                # [COMPUTE]: JAX NUTS sampler
    "onnx",                                          # [COMPUTE]: model graph IR
    "onnxruntime; python_version<'3.15'",            # [COMPUTE]: model runtime
    "optimistix; python_version<'3.15'",             # [COMPUTE]: JAX nonlinear solvers and adjoint VJP
    "pandas",                                        # [DATA]: dataframe substrate
    "pandas-stubs",
    "pandera",                                       # [DATA]: schema and quality-rule contracts
    "pdal",                                          # [GEOMETRY]: point-cloud pipeline
    "pint",
    "polars",                                        # [DATA]: dataframe engine
    "pyarrow<24",                                    # [DATA]: Arrow C++ bridge
    "pye57; python_version<'3.15'",                  # [GEOMETRY]: E57 scan IO
    "pymc<5.27",                                     # [COMPUTE]: probabilistic programming
    "pyogrio",                                       # [GEOMETRY]: GDAL vector IO
    "pyproj",                                        # [GEOMETRY]: PROJ coordinate transforms
    "python-flint",                                  # [COMPUTE]: Arb interval numerics
    "rasterio",                                      # [DATA]: raster geospatial IO
    "rhino3dm",                                      # [GEOMETRY]: Rhino mesh and 3DM IO
    "rustworkx",                                     # [COMPUTE_DATA]: graph algorithms
    "salib",                                         # [COMPUTE]: global sensitivity analysis
    "clarabel",                                      # [COMPUTE]: Clarabel conic solver and cvxpy backend
    "pywavelets",                                    # [COMPUTE]: discrete and continuous wavelet transforms
    "lark",                                          # [GEOMETRY]: IDS and selector parsing grammar
    "pystac",                                        # [DATA]: STAC item and collection object model
    "pystac-client",                                 # [DATA]: STAC API search and discovery client
    "stac-geoparquet",                               # [DATA]: STAC item GeoParquet table interchange
    "array-api-compat",                              # [COMPUTE]: array API portability shim
    "array-api-extra",                               # [COMPUTE]: supplemental array API helpers
    "mpmath",                                        # [COMPUTE]: arbitrary-precision real and complex math
    "pylance",                                       # [DATA]: Lance columnar/vector format
    "virtualizarr",                                  # [DATA]: archival reference aggregation into virtual Zarr
    "compas_dr",                                     # [GEOMETRY]: COMPAS dynamic relaxation
    "compas_tna",                                    # [GEOMETRY]: COMPAS thrust-network analysis
    "diffrax; python_version<'3.15'",                # [COMPUTE]: JAX differential-equation solvers
    "equinox; python_version<'3.15'",                # [COMPUTE]: JAX PyTree modules
    "lineax; python_version<'3.15'",                 # [COMPUTE]: JAX linear solvers
    "interpax; python_version<'3.15'",               # [COMPUTE]: JAX interpolation and splines
    "quadax; python_version<'3.15'",                 # [COMPUTE]: JAX adaptive quadrature
    "optax; python_version<'3.15'",                  # [COMPUTE]: first-order JAX optimizers for optimistix
    "cvxpy<1.9",                                     # [COMPUTE]: disciplined convex optimization
    "manifold3d",                                    # [GEOMETRY]: robust mesh booleans
    "sectionproperties",                             # [GEOMETRY]: cross-section property solver enrichment
    "nutpie",                                        # [COMPUTE]: Rust NUTS sampler for PyMC
    "pyiceberg",                                     # [DATA]: Apache Iceberg tables
    "skl2onnx",                                      # [COMPUTE]: sklearn-to-ONNX converter
    "scikit-fem",                                    # [COMPUTE]: FEM assembly
    "scikit-image; python_version<'3.15'",           # [ARTIFACTS]: image processing
    "scikit-learn",                                  # [COMPUTE]: classical ML and ONNX export
    "scipy",                                         # [COMPUTE]: numerical algorithms
    "scipy-stubs",
    "shapely",                                       # [GEOMETRY]: planar operations
    "sparse; python_version<'3.15'",                 # [DATA]: sparse n-D arrays
    "sympy",
    "trimesh",
    "uncertainties",
    "xarray",
    "xxhash",                                        # [RUNTIME]: content identity hashes matching C# System.IO.Hashing
    "grpcio-tools",                                  # [RUNTIME]: gRPC protoc codegen companion
    "zarr",                                          # [DATA]: chunked n-D arrays
    "blackjax; python_version<'3.15'",               # [COMPUTE]: JAX NUTS/HMC samplers
    "cadquery-ocp; python_version<'3.15'",           # [GEOMETRY]: OpenCASCADE STEP/AP242 kernel
    "kiss-matcher; python_version<'3.15'",           # [GEOMETRY]: global point-cloud registration
    "bcf-client",                                    # [GEOMETRY]: BCF 3.0 coordination XML
    "honeybee-core",                                 # [GEOMETRY]: HBJSON base object model and validation companion
    "honeybee-energy",                               # [GEOMETRY]: Honeybee energy model construction and simulation exchange
    "honeybee-openstudio",                           # [GEOMETRY]: Honeybee to OpenStudio/EnergyPlus translation companion
    "honeybee-standards",                            # [GEOMETRY]: baseline default construction/program/schedule standards for Honeybee energy models
    "honeybee-energy-standards",                     # [GEOMETRY]: large ASHRAE 90.1 / DOE-prototype standards-extension library (constructions/programs/schedules by identifier)
    "dragonfly-core",                                # [GEOMETRY]: Dragonfly district and urban model object graph
    "dragonfly-energy",                              # [GEOMETRY]: Dragonfly energy model aggregation and translation
    "ladybug-core",                                  # [GEOMETRY]: Ladybug weather, units, analysis-period, and location primitives
    "ladybug-geometry",                              # [GEOMETRY]: Ladybug planar and solid geometry primitives
    "ladybug-comfort",                               # [GEOMETRY]: comfort-model calculations
    "queenbee",                                      # [RUNTIME]: recipe and workflow schema contract models
    "lbt-recipes",                                   # [RUNTIME]: Ladybug Tools recipe wrappers and simulation workflows
    "pollination-handlers",                          # [RUNTIME]: Pollination job handler and recipe execution adapters
    "dataframely",                                   # [DATA]: polars-native declarative column rules with FailureInfo partition reporting
    "pointblank",                                    # [DATA]: graded data-quality observability tier above pass/fail checks
    "sqlglot",                                       # [DATA]: SQL parser, transpiler, optimizer, and lineage engine
    "daft",                                          # [DATA]: distributed and streaming out-of-core engine
    "fastexcel",                                     # [DATA]: calamine Rust Arrow Excel reader
    "flox",                                          # [DATA]: vectorized and parallel grouped reductions for xarray
    "igraph",                                        # [DATA]: C-core Leiden/Louvain/Infomap community detection
    "rioxarray",                                     # [DATA]: rasterio accessor bridging ndarray to CF DataArray and COG raster write
    "odc-stac",                                      # [DATA]: lazy dask cube from discovered STAC items
    "planetary-computer",                            # [DATA]: STAC URL signing for Client.open modifiers and odc.stac patch_url
    "datafusion",                                    # [DATA]: federation and streaming engine with Substrait plan interchange
    "polars-st",                                     # [DATA]: spatial-typed polars frames for the DGGS/spatial-frame plane
    "h3ronpy",                                       # [DATA]: Arrow-native H3 cell ops on polars frames
    "adbc-driver-flightsql",                         # [DATA]: Arrow Flight SQL distributed remote driver
    "xarray-spatial; python_version<'3.15'",         # [DATA]: raster terrain analytics
    "tensorstore; python_version<'3.15'",            # [DATA]: high-throughput async zarr-v3 reader
    "geoarrow-rust-compute",                         # [DATA]: GeoRust operations on GeoArrow memory
    "lazrs",                                         # [DATA]: compressed-COPC LAZ backend for laspy.copc
    "laszip",                                        # [DATA]: alternate compressed-COPC LAZ backend for laspy.copc
    "openepd",                                       # [DATA]: OpenEPD declarations and PCR material-impact payloads
    "epdx<1.0",                                      # [DATA]: EPDx environmental product declaration interchange
    "brightway2",                                    # [DATA]: Brightway LCA facade for material-impact calculations
    "bw2data",                                       # [DATA]: Brightway project, database, and storage layer
    "bw2calc",                                       # [DATA]: Brightway LCA calculation engine
    "bw2io",                                         # [DATA]: Brightway import/export and database ingestion
    "bw-processing",                                 # [DATA]: Brightway matrix-processing substrate
    "olca-ipc",                                      # [DATA]: openLCA IPC client for foreground/background LCA interchange
    "premise; python_version<'3.15'",                # [DATA]: prospective LCA scenario database transformer
    # --- [ARTIFACTS]
    "altair",
    "brotli",                                        # [ARTIFACTS]: compression
    "colour-science",                                # [ARTIFACTS]: CIE, spectral, and appearance color models
    "fonttools",                                     # [ARTIFACTS]: font subsetting, instancing, and shaping metadata
    "jinja2",                                        # [ARTIFACTS]: report templating between visual and document outputs
    "lxml",                                          # [ARTIFACTS]: XML processing
    "lz4",                                           # [ARTIFACTS]: compression
    "matplotlib",                                    # [ARTIFACTS]: plotting
    "nbclient",                                      # [ARTIFACTS]: headless notebook execution client
    "openpyxl",
    "papermill",                                     # [ARTIFACTS]: parameterized notebook runs
    "pikepdf",
    "pillow",                                        # [ARTIFACTS]: image IO
    "py7zr",
    "pyhanko",                                       # [ARTIFACTS]: PDF digital signing and PAdES
    "pymupdf",
    "pypdf",
    "pypdfium2",
    "pyvista; python_version<'3.15'",                # [ARTIFACTS]: 3D scientific visualization
    "python-barcode",                                # [ARTIFACTS]: linear barcode symbologies beside the segno QR arm
    "python-docx",
    "python-magic",
    "python-pptx",
    "segno",                                         # [ARTIFACTS]: QR and Micro-QR vector codes
    "svgelements",                                   # [ARTIFACTS]: SVG geometry, transform, and parse helpers
    "reportlab",
    "ruamel-yaml",
    "tomlkit",
    "vl-convert-python",
    "vtk; python_version<'3.15'",                    # [ARTIFACTS]: VTK engine for pyvista
    "weasyprint",
    "great-tables",                                  # [ARTIFACTS]: publication-quality display tables
    "uharfbuzz",                                     # [ARTIFACTS]: HarfBuzz text-shaping bindings
    "typst",                                         # [ARTIFACTS]: Typst PDF typesetting
    "vegafusion",                                    # [ARTIFACTS]: server-side Vega transform and pre-transform export
    "ocrmypdf",                                      # [ARTIFACTS]: OCR-to-PDF/A with sidecar text
    "pdfplumber",                                    # [ARTIFACTS]: ruled-table extraction over pdfminer.six
    "docxtpl",                                       # [ARTIFACTS]: template-driven docx authoring
    "msoffcrypto-tool",                              # [ARTIFACTS]: ECMA-376 Office decrypt/encrypt boundary
    "odfpy",                                         # [ARTIFACTS]: ODF write for OpenDocument text, spreadsheet, and presentation trees
    "xlsxwriter",                                    # [ARTIFACTS]: streaming write-only xlsx
    "nbconvert",                                     # [ARTIFACTS]: executed-notebook export to HTML and Markdown
    "jupytext",                                      # [ARTIFACTS]: notebook round-trip text source
    "coloraide",                                     # [ARTIFACTS]: oklch gamut mapping and CVD filters
    "blackrenderer",                                 # [ARTIFACTS]: COLRv1 color-glyph SVG rasterization
    "c2pa-python",                                   # [ARTIFACTS]: cross-format C2PA content credentials
    "stream-zip",                                    # [ARTIFACTS]: bounded-memory streaming zip with ZIP64/AES-256
    "detools",                                       # [ARTIFACTS]: binary-delta engine
    "drawsvg",                                       # [ARTIFACTS]: hierarchical named-layer SVG authoring
    "exif",                                          # [ARTIFACTS]: EXIF descriptive-metadata read/write
    "grandalf",                                      # [ARTIFACTS]: Sugiyama and routed diagram layout
    "iptcinfo3",                                     # [ARTIFACTS]: IPTC descriptive-metadata read/write
    "pdfimpose",                                     # [ARTIFACTS]: press signatures, creep, cuts, and folds
    "psdtags",                                       # [ARTIFACTS]: Photoshop TIFF image resources and layer source data
    "pyphen",                                        # [ARTIFACTS]: language-aware hyphenation dictionaries
    "resvg-py",                                      # [ARTIFACTS]: in-process SVG to PNG/PDF rasterization
    "simpleidml",                                    # [ARTIFACTS]: IDML package mutation and composition
    "tifffile",                                      # [ARTIFACTS]: TIFF container IO and extratag authoring
    "av",                                            # [ARTIFACTS]: PyAV video/audio mux and encode
    "pyvips",                                        # [ARTIFACTS]: fused decode, downscale, ICC, and smartcrop
    "lets-plot; python_version<'3.15'",              # [ARTIFACTS]: host-free grammar-of-graphics render to svg/png/pdf
    "python-bidi",                                   # [ARTIFACTS]: UAX 9 bidi reorder pass before HarfBuzz shaping
    "python-calamine",                               # [ARTIFACTS]: fast xlsx/xlsb/xls/ods reader
    "python-xmp-toolkit",                            # [ARTIFACTS]: XMP packet read/write for descriptive metadata
    "uniseg",                                        # [ARTIFACTS]: Unicode line, word, and grapheme segmentation
    "usd-core; python_version<'3.15'",               # [ARTIFACTS]: USD/USDZ scene packaging
    "zxing-cpp",                                     # [ARTIFACTS]: 2D matrix codes encode and decode
    "stream-unzip",                                  # [ARTIFACTS]: bounded-memory streaming unzip inverse for stream-zip
]

[dependency-groups]
dev = [
    "coverage",
    "dirty-equals",
    "hypothesis",
    "inline-snapshot",
    "moto[server]",
    "mypy",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-deadfixtures",
    "pytest-randomly",
    "pytest-socket",
    "pytest-timeout",
    "pytest-xdist",
    "ruff>=0.15.20,<0.16",
    "squawk-cli",
    "ty",
    "types-psutil",
    "validate-pyproject[all]",
]
mutation = ["mutmut"]

# --- [UV] ------------------------------------------------------------------

[tool.uv]
package =        false
cache-dir =      ".cache/uv"
default-groups = ["dev"]
config-settings-package = {
    python-flint = { setup-args = "-Dflint_version_check=false" },
    scipy =        { setup-args = "-Duse-pythran=false" },
}

[tool.uv.sources]
beartype = { git = "https://github.com/beartype/beartype.git", rev = "f370a0b1733413681e7a72bf36fbe839e60b3c85" }

# --- [TY] ------------------------------------------------------------------

[tool.ty.environment]
python-platform = "all"
python-version = "3.15"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.src]
exclude = [
    ".approval_tests_temp",
    ".artifacts",
    ".cache",
    ".claude/skills/**/.cache",
    ".claude/worktrees",
    ".nx",
    ".venv",
    "coverage",
    "mutants",
    "node_modules",
    "test-results",
    "tests/ast-grep/fail/**",
    "tests/ast-grep/pass/**",  # structural probe corpus; ast-grep verification owns pass/fail semantics
    "tmp",
]

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

# --- [MYPY] ----------------------------------------------------------------

# `ty` is the binding type gate; mypy is advisory for `tools/assay` and `tests`.
# Mypy-only divergences stay in overrides because `ty` rejects inline type-ignore comments.
[tool.mypy]
files =                   ["tools/assay", "tests"]
python_version =          "3.15"
cache_dir =               ".cache/mypy"
strict =                  true
pretty =                  true
warn_unreachable =        true
explicit_package_bases =  true
warn_unused_configs =     true
disallow_any_explicit =   true
disallow_any_unimported = true
plugins =                 ["pydantic.mypy"]
enable_error_code = [
    "exhaustive-match",
    "explicit-override",
    "ignore-without-code",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]
exclude = [
    "^\\.approval_tests_temp/",
    "^\\.artifacts/",
    "^\\.cache/",
    "^\\.claude/skills/.*/\\.cache/",
    "^\\.claude/worktrees/",
    "^\\.git/",
    "^\\.nx/",
    "^\\.venv/",
    "^build/",
    "^dist/",
    "^coverage/",
    "^mutants/",
    "^test-results/",
    "^node_modules/",
    "^tests/ast-grep/fail/",
    "^tests/ast-grep/pass/",
    "^tmp/",
]

[tool.pydantic-mypy]
init_typed =                    true
init_forbid_extra =             true
warn_required_dynamic_aliases = true
warn_untyped_fields =           true

# `tests/**` stays `ty`-clean; these relaxations isolate strict-mypy lag around TypeForm, sentinel, Callable, match, and ctor narrowing.
[[tool.mypy.overrides]]
module =                  "tests.*"
disallow_any_explicit =   false
disallow_any_unimported = false
warn_unreachable =        false
disable_error_code =      ["func-returns-value", "attr-defined", "type-arg", "override", "arg-type"]

[[tool.mypy.overrides]]
module =                 ["fsspec", "fsspec.*", "boto3", "boto3.*"]  # backend imports lack py.typed coverage
ignore_missing_imports = true

# --- [PYTEST] --------------------------------------------------------------

# `pytest-benchmark` and `pytest-xdist` stay in separate sessions under `filterwarnings = ["error"]`.
# Do not add `-n` to default `addopts`; parallel runs must unload benchmark config explicitly.
[tool.pytest]
minversion =               "9.0"
strict =                   true
cache_dir =                ".cache/pytest"
testpaths =                ["tests"]
pythonpath =               ["."]
python_files =             ["test_*.py", "*_test.py", "bench_*.py"]
python_functions =         ["test_*", "bench_*"]
collect_imported_tests =   false
empty_parameter_set_mark = "fail_at_collect"
addopts = [
    "-p",
    "tests.python._testkit.runtime",  # testkit runtime plugin loads profiles, OTel, and markers before pytest config
    "-x",
    "--tb=short",
    "--import-mode=importlib",
    "-m",
    "not benchmark",
    "--disable-socket",
    "--allow-unix-socket",
    "--benchmark-storage=file://.artifacts/python/benchmarks",  # benchmark artifacts route through the Assay catalog URI
    "--hypothesis-profile=rasm",
]
filterwarnings = ["error"]
timeout = "30"  # pytest-timeout registers this option as a string; pytest 9 TOML mode rejects a native int
required_plugins = [
    "anyio",
    "hypothesis",
    "inline-snapshot",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-randomly",
    "pytest-socket",
    "pytest-timeout",
    "pytest-xdist",
]
markers = [
    "benchmark: benchmark measurement tests",
    "mutation: mutation-testing acceptance and survivor-triage tests",
    "network: tests that need real INET sockets lifted (loopback servers or egress); excluded from mutation lanes",
    "property: property-based tests",
]

[tool.anyio]
asyncio_mode = "auto"

# --- [INLINE_SNAPSHOT] -----------------------------------------------------

[tool.inline-snapshot]
default-flags = ["short-report"]  # reports mismatches without mutating snapshots
storage-dir =   ".cache/inline-snapshot"

# --- [COVERAGE] ------------------------------------------------------------

[tool.coverage.run]
branch =          true
relative_files =  true      # subprocess coverage combines through relative repo paths
source =          ["tools/assay"]
data_file =       ".cache/coverage/.coverage"
core =            "sysmon"  # CPython 3.15 beta lacks coverage's compiled C tracer

[tool.coverage.report]
fail_under =    95  # sysmon captures fewer arcs than the unavailable C core
show_missing =  true
skip_covered =  true
exclude_also = [
    "if TYPE_CHECKING:",
    "assert_never\\(",
    "\\.\\.\\.$",
    "if __name__ == .__main__.:",
]

[tool.coverage.json]
output = ".artifacts/python/coverage/coverage.json"
pretty_print = true
show_contexts = true

[tool.coverage.html]
directory = ".artifacts/python/coverage/html"
show_contexts = true

[tool.coverage.xml]
output = ".artifacts/python/coverage/coverage.xml"

[tool.coverage.lcov]
output = ".artifacts/python/coverage/coverage.lcov"

# --- [MUTMUT] --------------------------------------------------------------

[tool.mutmut]
source_paths = ["tools/assay"]                                    # Mutation runs through the Assay-staged workdir; retired `.cache/mut-venv` and requirements fallbacks stay retired.
pytest_add_cli_args_test_selection = ["tests/python/tools/assay"] # Mutmut's type-check prefilter raises on unrelated checker diagnostics; tests remain the kill mechanism.
pytest_add_cli_args = [
    "--hypothesis-profile=rasm-mutation",
    "-o",
    "required_plugins=",                                          # mutmut disables pytest-randomly, so this invocation waives the required-plugins guard
    "-m",
    "not benchmark and not network",
    # Subprocess tests execute the unmutated CLI outside mutmut's copied tree; deselect them for mutation.
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_exit_code",
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_bootstrap_error_config_fault",
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_failing_rail_channel_separation",
    "--deselect",
    "tests/python/tools/assay/test_main.py::test_main_subprocess_human_renderer_console_stderr",
]
do_not_mutate = ["tools/assay/__init__.py", "tools/assay/rails/mutation_gate.py"]
mutate_only_covered_lines = true  # mutation run supplies absolute-keyed coverage data for mutmut's covered-line map
max_stack_depth = -1              # disables mutmut's strict stack walk over importlib pseudo-filenames

# --- [RUFF] ----------------------------------------------------------------

[tool.ruff]
cache-dir =        ".cache/ruff"
preview =          true
line-length =      150
required-version = ">=0.15.20,<0.16"
target-version =   "py315"
extend-exclude = [
    "**/.approval_tests_temp/**",
    "**/.artifacts/**",
    "**/.cache/**",
    "**/.claude/skills/**/.cache/**",
    "**/.claude/worktrees/**",
    "**/test-results/**",
    "**/coverage/**",
    "**/mutants/**",
    "**/.history/**",
    "**/tests/ast-grep/**",
]

[tool.ruff.format]
line-ending =               "lf"
docstring-code-format =     true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- [FORMATTER]
    "COM812",  # ruff format owns trailing commas
    "ISC001",  # ruff format owns implicit string concatenation
    # --- [MATCH_DISPATCH]
    "RET504",  # named intermediates keep flow pipelines readable
    "RET505",  # explicit match dispatch keeps exhaustive arms visible
    "RET506",  # explicit error branches keep ROP rails visible
    "SIM108",  # match/case owns dispatch, not ternaries
    "SIM114",  # match/case owns dispatch, not merged if arms
    # --- [ERROR_RAILS]
    "EM101",   # frozen errors carry inline messages
    "EM102",   # error constructors carry formatted context
    "TRY003",  # domain errors carry descriptive messages
    "TRY301",  # `@safe` ROP boundaries may raise inside the guarded call
    "TRY400",  # structlog `.error()` is valid outside exception handlers
    # --- [DOCSTRINGS]
    "DOC502",  # Raises sections may document propagated helper exceptions; DOC501 still requires direct raises
    # --- [SEMANTIC_ORDER]
    "RUF022",  # semantic public-surface order beats alphabetical `__all__`
    "RUF023",  # semantic slot order beats alphabetical `__slots__`
    # --- [WORKFLOW]
    "TD003",   # TODO links are not required for local maintenance notes
    "FIX002",  # TODO comments are accepted source markers
    "INP001",  # monorepo packages may be implicit namespaces
    "CPY001",  # top-level LICENSE owns copyright notice
    # --- [SECTION_DIVIDERS]
    "ERA001",  # compact `# --- [LABEL]` subsection dividers are source structure
]

[tool.ruff.lint.per-file-ignores]
"__init__.py"      = ["F401"]
"**/.claude/skills/**/scripts/**" = [
    "TC003",
    "ANN001",
    "ANN401",
    "B905",
    "C901",
    "E501",
    "ERA001",
    "EXE001",
    "FBT001",
    "PLC0415",
    "PLC2701",
    "PLC3002",
    "PLR0911",
    "PLR0912",
    "PLR0914",
    "PLR0915",
    "PLR6201",
    "PLW1510",
    "PTH109",
    "S105",
    "S310",
    "S404",
    "S603",
    "S607",
    "TID251",
    "TRY300",
]
"tools/py_analyzer/**" = ["PLR0912", "TC003"]
"tests/**"         = ["S101", "PLR2004", "PLR0913", "ARG001", "ARG002", "ANN201", "ANN401", "D101", "D102", "D103", "SLF001", "PLC2701"]  # PLC2701: specs import the private-by-design _testkit package
"**/adapters/**"   = ["ANN401"]
"**/conftest.py"   = ["E402", "F401", "ARG001"]
"tests/python/_testkit/runtime.py" = ["E402"]  # Hypothesis environment gates must precede imports

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any =      false
mypy-init-return =        true
suppress-dummy-args =     true
suppress-none-returning = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "beartype.BeartypeConf",
    "msgspec.Meta",
    "msgspec.field",
    "pydantic.ConfigDict",
    "pydantic.Field",
    "pydantic.PrivateAttr",
    "stamina.retry",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id", "type", "input", "format", "hash"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"dask.array" =     "da"
"dask.dataframe" = "dd"
"scipy" =          "sp"
"sympy" =          "sym"
"xarray" =         "xr"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type =          "csv"
raises-extend-require-match-for = ["AttributeError", "KeyError", "RuntimeError", "TypeError", "msgspec.ValidationError", "pydantic.ValidationError",]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_validate", "_disc", "_check", "_value_"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports =        "all"
banned-module-level-imports = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"concurrent.futures.ProcessPoolExecutor".msg = "Use anyio.to_process.run_sync() — structured concurrency with cancellation support."
"concurrent.futures.ThreadPoolExecutor".msg =  "Use anyio.to_thread.run_sync() with CapacityLimiter — structured concurrency."
"abc.ABC".msg =                        "Use typing.Protocol — structural subtyping, no inheritance hierarchies."
"abc.abstractmethod".msg =             "Use typing.Protocol — structural subtyping replaces nominal."
"asyncio".msg =                        "Use anyio — run/sleep/gather/Lock/Event/Semaphore/Queue all have anyio equivalents."
"collections.namedtuple".msg =         "Use pydantic BaseModel(frozen=True) or msgspec.Struct(frozen=True) — namedtuple lacks runtime validation."
"contextlib.suppress".msg =            "Use Result rails or a marked boundary adapter — suppress hides fallibility."
"http.client".msg =                    "Use httpx behind a validated adapter — direct stdlib HTTP bypasses timeout, retry, and observability policy."
"json.dump".msg =                      "Use Path.write_bytes(msgspec.json.encode(obj)) — C-accelerated, struct-aware serialization."
"json.dumps".msg =                     "Use msgspec.json.encode() — C-accelerated, gc=False struct support, 5x+ stdlib perf."
"json.JSONDecoder".msg =               "Use msgspec.json.Decoder(type=T) — schema-validated, zero-copy deserialization."
"json.JSONEncoder".msg =               "Use msgspec.json.Encoder(enc_hook=fn) — custom serialization via hook, not class inheritance."
"json.load".msg =                      "Use msgspec.json.decode(Path.read_bytes(), type=T) — schema-validated, zero-copy."
"json.loads".msg =                     "Use msgspec.json.decode(buf, type=T) — schema-validated, zero-copy deserialization."
"logging.basicConfig".msg =            "Logging pipeline configured via structlog + OpenTelemetry — never configure stdlib directly."
"logging.critical".msg =               "Use structlog.get_logger().critical() — stdlib root logger bypasses structured pipeline."
"logging.debug".msg =                  "Use structlog.get_logger().debug() — stdlib root logger bypasses structured pipeline."
"logging.error".msg =                  "Use structlog.get_logger().error() — stdlib root logger bypasses structured pipeline."
"logging.exception".msg =              "Use structlog.get_logger().exception() — stdlib root logger bypasses structured pipeline."
"logging.getLogger".msg =              "Use structlog.get_logger() — stdlib logging bypasses structured pipeline."
"logging.info".msg =                   "Use structlog.get_logger().info() — stdlib root logger bypasses structured pipeline."
"logging.warning".msg =                "Use structlog.get_logger().warning() — stdlib root logger bypasses structured pipeline."
"os.environ".msg =                     "Use pydantic-settings BaseSettings — validated, typed config; never read env vars directly."
"os.getenv".msg =                      "Use pydantic-settings BaseSettings — validated, typed config at startup; not scattered env reads."
"pydantic.validator".msg =             "Use @field_validator or @model_validator — pydantic.validator is deprecated v1 API."
"requests".msg =                       "Use httpx behind a typed adapter — direct requests imports are not an approved transport surface."
"returns".msg =                        "Use expression.Result / expression.Option — returns is not an approved rail surface."
"returns.maybe".msg =                  "Use expression.Result / expression.Option — returns is not an approved rail surface."
"returns.result".msg =                 "Use expression.Result / expression.Option — returns is not an approved rail surface."
"socket.create_connection".msg =       "Use anyio networking or httpx adapters with explicit deadlines — direct sockets bypass boundary policy."
"socket.create_server".msg =           "Use anyio networking with explicit lifecycle ownership — direct sockets bypass boundary policy."
"socket.socket".msg =                  "Use anyio networking or a marked boundary adapter — raw sockets bypass deadline and observability policy."
"subprocess.call".msg =                "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"subprocess.check_call".msg =          "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"subprocess.check_output".msg =        "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"subprocess.Popen".msg =               "Use anyio.open_process() — async process handle with structured teardown."
"subprocess.run".msg =                 "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"time.sleep".msg =                     "Use anyio.sleep() — time.sleep blocks the event loop thread."
"traceback.print_exc".msg =            "Use structlog.get_logger().exception() — traceback.print_exc leaks to stderr."
"typing.Any".msg =                     "Use precise type parameters or object at validated boundaries; Any requires explicit boundary justification."
"typing.ParamSpec".msg =               "Use PEP 695 decorator parameters (**P) — legacy ParamSpec imports drift from current type syntax."
"typing.TypeAlias".msg =               "Use PEP 695 type aliases (`type Name = ...`) — TypeAlias is legacy syntax."
"typing.TypeGuard".msg =               "Use TypeIs — complement-safe narrowing in both branches is required."
"typing.TypeVar".msg =                 "Use PEP 695 type parameters — TypeVar is legacy generic syntax."
"typing.TypeVarTuple".msg =            "Use PEP 695 variadic type parameters — TypeVarTuple is legacy syntax."
"typing.cast".msg =                    "Use TypeGuard/TypeIs, validated adapters, or pattern narrowing; cast erases checker evidence."
"typing.NamedTuple".msg =              "Use pydantic BaseModel(frozen=True) or msgspec.Struct(frozen=True) — NamedTuple lacks runtime validation."
"typing.no_type_check".msg =           "Rasm type gates are mandatory — use a typed boundary adapter or refine the signature instead."
"typing.Optional".msg =                "Use Result/Option for fallibility; use T | None only for non-fallible absence."
"typing_extensions.Any".msg =          "Use precise type parameters or object at validated boundaries; Any requires explicit boundary justification."
"typing_extensions.cast".msg =         "Use TypeGuard/TypeIs, validated adapters, or pattern narrowing; cast erases checker evidence."
"typing_extensions.deprecated".msg =   "Deprecation markers are forbidden — refactor APIs immediately."
"typing_extensions.Optional".msg =     "Use Result/Option for fallibility; use T | None only for non-fallible absence."
"typing_extensions.ParamSpec".msg =    "Use PEP 695 decorator parameters (**P) — legacy ParamSpec imports drift from current type syntax."
"typing_extensions.TypeAlias".msg =    "Use PEP 695 type aliases (`type Name = ...`) — TypeAlias is legacy syntax."
"typing_extensions.TypeGuard".msg =    "Use TypeIs — complement-safe narrowing in both branches is required."
"typing_extensions.TypeVar".msg =      "Use PEP 695 type parameters — TypeVar is legacy generic syntax."
"typing_extensions.TypeVarTuple".msg = "Use PEP 695 variadic type parameters — TypeVarTuple is legacy syntax."
"urllib.request".msg =                 "Use httpx behind a typed adapter — direct urllib imports bypass transport policy."
"urllib3".msg =                        "Use httpx behind a typed adapter — urllib3 remains a transitive implementation detail."
"warnings.catch_warnings".msg =        "Deprecation/workaround warning flows are forbidden — refactor immediately."
"warnings.deprecated".msg =            "Deprecation decorators are forbidden — refactor APIs immediately."
"warnings.filterwarnings".msg =        "Do not filter/suppress warnings — remove deprecated paths and refactor immediately."
"warnings.simplefilter".msg =          "Do not filter/suppress warnings — remove deprecated paths and refactor immediately."
"warnings.warn".msg =                  "Deprecation/workaround warnings are forbidden — refactor immediately."
"warnings.warn_explicit".msg =         "Deprecation/workaround warnings are forbidden — refactor immediately."

[tool.ruff.lint.flake8-type-checking]
strict =                         true
exempt-modules =                 ["typing", "typing_extensions"]
runtime-evaluated-base-classes = ["msgspec.Struct", "pydantic.BaseModel", "pydantic.RootModel", "pydantic_settings.BaseSettings"]
runtime-evaluated-decorators =   ["beartype.beartype", "pydantic.computed_field", "pydantic.field_validator", "pydantic.model_validator", "pydantic.validate_call"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports =         true
force-sort-within-sections = true
lines-after-imports =        2
order-by-type =              false
split-on-trailing-comma =    false

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator", "pydantic.model_validator"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
ignore-var-parameters = true
convention =            "google"
ignore-decorators =     ["typing.overload", "typing.override"]
property-decorators =   ["pydantic.computed_field"]

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = false

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__get_pydantic_core_schema__", "__get_pydantic_json_schema__"]
allow-magic-value-types =   ["str", "bytes", "int"]
max-args = 8
max-bool-expr = 3
max-branches = 6
max-locals = 10
max-nested-blocks = 4
max-public-methods = 10
max-statements = 30
